# rustybox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  rustybox.rs
.circleci/: config.yml
.github/workflows/: rust.yml
applets/: applet_tables.rs  applets.rs  usage.rs  usage_pod.rs
archival/: bbunzip.rs  bzip2.rs  cpio.rs  dpkg.rs  dpkg_deb.rs  gzip.rs  lzop.rs  rpm.rs  tar.rs  unzip.rs
archival/libarchive/: bb_archive.rs  common.rs  data_align.rs  data_extract_all.rs  data_extract_to_command.rs  data_extract_to_stdout.rs  data_skip.rs  decompress_bunzip2.rs  decompress_gunzip.rs  decompress_unlzma.rs  decompress_unxz.rs  filter_accept_all.rs  filter_accept_list.rs  filter_accept_list_reassign.rs  filter_accept_reject_list.rs  find_list_entry.rs  get_header_ar.rs  get_header_cpio.rs  get_header_tar.rs  get_header_tar_bz2.rs  get_header_tar_gz.rs  get_header_tar_lzma.rs  get_header_tar_xz.rs  header_list.rs  header_skip.rs  header_verbose_list.rs  init_handle.rs  lzo1x_1.rs  lzo1x_1o.rs  lzo1x_d.rs  open_transformer.rs  seek_by_jump.rs  seek_by_read.rs  unpack_ar_archive.rs  unsafe_prefix.rs  unsafe_symlink_target.rs
console_tools/: chvt.rs  clear.rs  deallocvt.rs  dumpkmap.rs  fgconsole.rs  kbd_mode.rs  loadfont.rs  loadkmap.rs  openvt.rs  reset.rs  resize.rs  setconsole.rs  setkeycodes.rs  setlogcons.rs  showkey.rs
coreutils/: basename.rs  cat.rs  chgrp.rs  chmod.rs  chown.rs  chroot.rs  cksum.rs  comm.rs  cp.rs  cut.rs  date.rs  dd.rs  df.rs  dirname.rs  dos2unix.rs  du.rs  echo.rs  env.rs  expand.rs  expr.rs  factor.rs  false.rs  fold.rs  head.rs  hostid.rs  id.rs  install.rs  link.rs  ln.rs  logname.rs  ls.rs  md5_sha1_sum.rs  mkdir.rs  mkfifo.rs  mknod.rs  mktemp.rs  mv.rs  nice.rs  nl.rs  nohup.rs  (+41 more)
coreutils/libcoreutils/: cp_mv_stat.rs  getopt_mk_fifo_nod.rs
debianutils/: pipe_progress.rs  run_parts.rs  start_stop_daemon.rs  which.rs
e2fsprogs/: chattr.rs  e2fs_lib.rs  fsck.rs  lsattr.rs
editors/: awk.rs  cmp.rs  diff.rs  ed.rs  patch.rs  sed.rs  vi.rs
findutils/: find.rs  grep.rs  xargs.rs
init/: bootchartd.rs  halt.rs  init.rs
klibc_utils/: nuke.rs  resume.rs
libbb/: appletlib.rs  ask_confirmation.rs  auto_string.rs  bb_askpass.rs  bb_bswap_64.rs  bb_cat.rs  bb_do_delay.rs  bb_getgroups.rs  bb_getsockname.rs  bb_pwd.rs  bb_qsort.rs  bb_strtonum.rs  capability.rs  change_identity.rs  chomp.rs  common_bufsiz.rs  compare_string_array.rs  concat_path_file.rs  concat_subpath_file.rs  copy_file.rs  copyfd.rs  correct_password.rs  crc32.rs  default_error_retval.rs  device_open.rs  dump.rs  duration.rs  endofname.rs  executable.rs  fclose_nonstdin.rs  fflush_stdout_and_exit.rs  fgets_str.rs  find_mount_point.rs  find_pid_by_name.rs  find_root_device.rs  full_write.rs  get_console.rs  get_cpu_count.rs  get_last_path_component.rs  get_line_from_file.rs  (+94 more)
libpwdgrp/: pwd_grp.rs  uidgid_get.rs
librb/: mod.rs  signal.rs
loginutils/: add_remove_shell.rs  addgroup.rs  adduser.rs  chpasswd.rs  cryptpw.rs  deluser.rs  getty.rs  login.rs  passwd.rs  su.rs  sulogin.rs  vlock.rs
mailutils/: mail.rs  makemime.rs  popmaildir.rs  reformime.rs  sendmail.rs
miscutils/: adjtimex.rs  bc.rs  beep.rs  chat.rs  conspy.rs  crond.rs  crontab.rs  devmem.rs  fbsplash.rs  hdparm.rs  hexedit.rs  i2c_tools.rs  less.rs  lsscsi.rs  makedevs.rs  man.rs  microcom.rs  mt.rs  nandwrite.rs  partprobe.rs  raidautorun.rs  readahead.rs  runlevel.rs  rx.rs  setfattr.rs  setserial.rs  strings.rs  time.rs  ts.rs  ttysize.rs  ubi_tools.rs  ubirename.rs  volname.rs  watchdog.rs
modutils/: modinfo.rs  modprobe_small.rs  modutils.rs
networking/: arp.rs  arping.rs  brctl.rs  dnsd.rs  ether_wake.rs  ftpd.rs  ftpgetput.rs  hostname.rs  httpd.rs  ifconfig.rs  ifenslave.rs  ifplugd.rs  ifupdown.rs  inetd.rs  interface.rs  ip.rs  ipcalc.rs  isrv.rs  isrv_identd.rs  nameif.rs  nbd_client.rs  nc.rs  netstat.rs  nslookup.rs  ntpd.rs  parse_pasv_epsv.rs  ping.rs  pscan.rs  route.rs  slattach.rs  ssl_client.rs  tc.rs  tcpudp.rs  tcpudp_perhost.rs  telnet.rs  telnetd.rs  tftp.rs  tls.rs  tls_aes.rs  tls_aesgcm.rs  (+12 more)
networking/libiproute/: ip_parse_common_args.rs  ipaddress.rs  iplink.rs  ipneigh.rs  iproute.rs  iprule.rs  iptunnel.rs  libnetlink.rs  ll_addr.rs  ll_map.rs  ll_proto.rs  ll_types.rs  rt_names.rs  rtm_map.rs  utils.rs
networking/udhcp/: arpping.rs  common.rs  d6_dhcpc.rs  d6_packet.rs  d6_socket.rs  dhcpc.rs  dhcpd.rs  dhcprelay.rs  domain_codec.rs  dumpleases.rs  packet.rs  signalpipe.rs  socket.rs
printutils/: lpd.rs  lpr.rs
procps/: free.rs  fuser.rs  iostat.rs  kill.rs  lsof.rs  mpstat.rs  nmeter.rs  pgrep.rs  pidof.rs  pmap.rs  powertop.rs  ps.rs  pstree.rs  pwdx.rs  smemcap.rs  sysctl.rs  top.rs  uptime.rs  watch.rs
runit/: chpst.rs  runsv.rs  runsvdir.rs  sv.rs  svlogd.rs
shell/: ash.rs  ash_ptr_hack.rs  cttyhack.rs  hush.rs  match.rs  math.rs  random.rs  shell_common.rs
sysklogd/: klogd.rs  logread.rs  syslogd_and_logger.rs
tests/: bc.rs  common.rs  yes.rs
testsuite/: README  TODO  bc.tests  bunzip2.tests  busybox.tests  bzcat.tests  mdev.tests  mount.testroot  printf.tests  runtest  sort.tests  taskset.tests  test.tests  testing.sh
testsuite/basename/: basename-does-not-remove-identical-extension  basename-works
testsuite/bunzip2/: bunzip2-reads-from-standard-input  (+1 more)
usage/: [  [[  acpid  add-shell  addgroup  adduser  adjtimex  arch  arp  arping  ash  awk  base64  basename  bc  beep  blkdiscard  blkid  blockdev  bootchartd  brctl  bunzip2  bzcat  bzip2  cal  cat  chat  chattr  chgrp  chmod  chown  chpasswd  chpst  chroot  chrt  chvt  cksum  clear  cmp  comm  (+349 more)
util_linux/: acpid.rs  blkdiscard.rs  blkid.rs  blockdev.rs  cal.rs  chrt.rs  dmesg.rs  eject.rs  fallocate.rs  fatattr.rs  fbset.rs  fdformat.rs  fdisk.rs  findfs.rs  flock.rs  freeramdisk.rs  fsck_minix.rs  fsfreeze.rs  fstrim.rs  getopt.rs  hexdump.rs  hexdump_xxd.rs  hwclock.rs  ionice.rs  ipcrm.rs  ipcs.rs  last_fancy.rs  losetup.rs  lspci.rs  lsusb.rs  mdev.rs  mesg.rs  mkfs_ext2.rs  mkfs_minix.rs  mkfs_vfat.rs  mkswap.rs  mod.rs  more.rs  mount.rs  mountpoint.rs  (+20 more)
(+184 files in other folders)
